fix: Fixed Sidebar slide in-out. Changed appearence on tablet.

--- a/src/components/Sidebar/SidebarContainer/Sidebar.module.scss
+++ b/src/components/Sidebar/SidebarContainer/Sidebar.module.scss
@@ -5,10 +5,10 @@
 }
 
 .header {
-  display: none;
-
   height: 40px;
+  width: 100%;
 
+  display: none;
   align-items: center;
   justify-content: flex-end;
 
@@ -34,17 +34,19 @@
 
 @include tablet {
   .container {
-    width: 100vw;
-    height: 100vh;
-    padding-left: calc(100vw - 400px);
-
     position: fixed;
     top: 0;
-    z-index: 100;
+    right: 0;
+    z-index: 110;
+
+    width: 60vw;
+    height: 100vh;
+    padding: 0px 30px 30px;
 
     transition: transform 0.3s;
     transform: translateX(100%);
-    background-color: transparent;
+
+    background-color: var(--clr-primary);
     overflow: auto;
   }
 
@@ -52,37 +54,20 @@
     display: flex;
     position: sticky;
     top: 0;
-  }
-
-  .content {
-    background-color: var(--clr-primary);
-
-    padding: 0px 30px 30px;
+    z-index: 200;
   }
 
   .opened {
     transform: translateX(0%);
-
-    transition: background-color 0.5s;
-    transition-delay: 0.1s;
-
-    background-color: rgba(black, 0.5);
   }
 }
 
 @include mobile {
   .container {
-    padding-left: 0;
-  }
-
-  .header {
     width: 100vw;
   }
 
   .content {
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
     gap: 16px;
   }
 }
